Clean up (#32)
* Add Makefile (#3)

* Config/docker (#1)

* Containerize java-app

* set specific version of mysql image

* Feature/spring security (#15)

* Add Makefile (#3)

* Config/docker (#1)

* Containerize java-app

* set specific version of mysql image

* Add SpringSecurity to pom.xml and configure cors configuration.

---------

Co-authored-by: Murat Akkus <128329402+MuratAkkus0@users.noreply.github.com>
Co-authored-by: Murat Akkus <akkusmurat123@gmail.com>

* remove unnecessary comments. (#16)

Co-authored-by: Murat Akkus <akkusmurat123@gmail.com>

* Revert "remove unnecessary comments. (#16)" (#17)

This reverts commit 60b4cec3a7ef8124ed0eb4e94e1b2b439192e2e1.

* Revert "Feature/spring security (#15)" (#18)

This reverts commit a838ecaef87e5a12f74a4817bf253717c545c836.

* updated user Token & Auth (#19)

* updated user Token & Auth

* Allowed Cors Policy for 'http://localhost:5173'

---------

Co-authored-by: dmytrovolodovskyi <d.volodovskyi@gmail.com>

* add nginx

* Feature/sp game controller (#20)

* Added Api call for Question Search

* Added Game Controller

* added Admin Control, Roles and API protection (#21)

Co-authored-by: dmytrovolodovskyi <d.volodovskyi@gmail.com>

* Fix/authentication fix (#22)

* Fixed Authentication Methode to read Bearer Headers

* Removed Unnecessary Controller

* Added Authentication Requirement to endpoint /api/sp/** (#23)

* Tests/unit test (#28)

* Question/User Controller Tests

* Update maven.yml

* IncorrectAnswer/SpGameController Tests

---------

Co-authored-by: kjell1312 <kjellb8@gmail.com>
Co-authored-by: kjell1312 <49532977+kjell1312@users.noreply.github.com>

* Tests/unit test (#28) (#29)

* Question/User Controller Tests

* Update maven.yml

* IncorrectAnswer/SpGameController Tests

---------

Co-authored-by: kjell1312 <kjellb8@gmail.com>
Co-authored-by: kjell1312 <49532977+kjell1312@users.noreply.github.com>

* Project cleanup (#30)

* Added Auth Header to Swagger
Removed Unnecessary Controllers

* Added Hi